# netbalance

./: .env.example  .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
data/: example1.csv  virus-host.csv
src/binet/: cli.py
src/netbalance/: balance.py  cli.py  viz.py
tests/: test_balance.py  test_cli.py
