[project]
authors = [
    { name = "sobhanAhmadian", email = "sobhan.ahmadian.moghadam@gmail.com" },
]
description = "Balance and visualize multi-cluster interaction networks"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=2.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
]
name = "binet"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64", "linux-64"]

[tool.pixi.pypi-dependencies]
binet = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=2.4.6,<3"
networkx = ">=3.6.1,<4"
matplotlib = ">=3.10.9,<4"
ipykernel = ">=7.2.0,<8"

[project.scripts]
binet = "binet.cli:main"

[project.urls]
Homepage = "https://github.com/sobhanAhmadian/binet"
Repository = "https://github.com/sobhanAhmadian/binet"
Issues = "https://github.com/sobhanAhmadian/binet/issues"