[project]
authors = [
    { name = "sobhanAhmadian", email = "sobhan.ahmadian.moghadam@gmail.com" },
]
description = "Balance and visualize multi-cluster interaction networks"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["numpy>=2.0", "networkx>=3.0", "matplotlib>=3.7"]
name = "netbalance"
requires-python = ">= 3.11"
version = "0.2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/sobhanAhmadian/netbalance"
Repository = "https://github.com/sobhanAhmadian/netbalance"
Issues = "https://github.com/sobhanAhmadian/netbalance/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64", "linux-64"]

[tool.pixi.pypi-dependencies]
netbalance = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=2.4.6,<3"
networkx = ">=3.6.1,<4"
matplotlib = ">=3.10.9,<4"
ipykernel = ">=7.2.0,<8"
pytest = ">=9.0.3,<10"
python-dotenv = ">=1.2.2,<2"
isort = ">=8.0.1,<9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
netbalance = "netbalance.cli:main"
